--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>1.1.3.RELEASE</version>
                 <configuration>
-                    <mainClass>Controller.TicTacToeController</mainClass>
+                    <!--<mainClass>Controller.TicTacToeController</mainClass>-->
                 </configuration>
             </plugin>
         </plugins>
